<resources>
    <string name="app_name">LAUNDRY</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="card_pelanggan_nama">Nama Pelanggan %1$s</string>
    <string name="card_pelanggan_nohp">No HP</string>
    <string name="card_pegawai_terdaftar">Terdaftar</string>
    <string name="card_pelanggan_hubungi">Hubungi</string>
    <string name="card_pelanggan_lihat">Lihat</string>
    <string name="card_pelanggan_alamat">Alamat</string>
    <string name="card_pegawai_nama">Nama Pegawai</string>
    <string name="tambah_pelanggan_namalengkap">Nama Lengkap</string>
    <string name="tambah_pelanggan_cabang">Nama Cabang</string>
    <string name="tambah_pelanggan_nohpaktif">No HP Aktif</string>
    <string name="tambah_pelanggan">TAMBAH PELANGGAN</string>
    <string name="tambah_pelanggan_simpan">Simpan</string>
    <string name="card_pegawai_cabang">Cabang</string>
    <string name="card_pegawai_id">ID Pegawai</string>
    <string name="tambah_pegawai">TAMBAH PEGAWAI</string>
    <string name="card_layanan_id">ID Layanan</string>
    <string name="card_layanan_nama">Nama Layanan</string>
    <string name="card_layanan_harga">Harga</string>
    <string name="tambah_layanan">TAMBAH LAYANAN</string>
    <string name="validasi_nama_pelanggan">nama tidak boleh kosong</string>
    <string name="validasi_alamat_pelanggan">alamat tidak boleh kosong</string>
    <string name="sukses_simpan_pelanggan">Berhasil</string>
    <string name="gagal_simpan_pelanggan">Gagal</string>
    <string name="validasi_nohp_pelanggan">no HP tidak boleh kosong</string>
    <string name="validasi_cabang_pelanggan">cabang tidak boleh kosong</string>
    <string name="validasi_nama_pegawai">nama tidak boleh kosong</string>
    <string name="validasi_alamat_pegawai">alamat tidak boleh kosong</string>
    <string name="validasi_nohp_pegawai">no HP tidak boleh kosong</string>
    <string name="validasi_terdaftar_pegawai">terdaftar_tidak boleh kosong</string>
    <string name="validasi_namacabang_pegawai">cabang tidak boleh kosong</string>
    <string name="card_pelanggan_terdaftar">Terdaftar</string>
    <string name="tambah_pegawai_cabang">Cabang</string>
    <string name="card_pegawai_alamat">Alamat</string>
    <string name="card_pegawai_nohp">No HP</string>
    <string name="card_pegawai_hubungi">Hubungi</string>
    <string name="card_pegawai_lihat">Lihat</string>
    <string name="tambah_pegawai_simpan">Simpan</string>
    <string name="tambah_pegawai_namalengkap">Nama Lengkap</string>
    <string name="tambah_pegawai_nohpaktif">No HP Aktif</string>
    <string name="tambah_pelanggan_alamat">Alamat</string>
    <string name="tambah_pegawai_terdaftar">Terdaftar</string>
    <string name="tambah_pegawai_alamat">Alamat</string>
    <string name="tambah_pelanggan_terdaftar">Terdaftar</string>
    <string name="validasi_terdaftar_pelanggan">terdaftar tidak boleh kosong</string>
    <string name="tambah_layanan_namalayanan">Nama layanan</string>
    <string name="card_layanan_cabang">Cabang</string>
    <string name="tambah_layanan_harga">Harga</string>
    <string name="tambah_layanan_cabang">Nama Cabang</string>
    <string name="tambah_layanan_simpan">Simpan</string>
    <string name="validasi_nama_layanan">nama layanan tidak boleh kosong</string>
    <string name="validasi_harga_layanan">harga tidak boleh kosong</string>
    <string name="validasi_cabang_layanan">cabang tidak boleh kosong</string>
    <string name="sukses_simpan_layanan">Berhasil</string>
    <string name="gagal_simpan_layanan">Gagal</string>
    <string name="tv_id_layanan">ID Layanan</string>
    <string name="tv_namalayanan">Nama Layanan</string>
    <string name="tv_harga">Harga</string>
    <string name="tv_cabang">Cabang</string>
    <string name="tv_namapegawai">Nama Pegawai</string>
    <string name="tv_id_pegawai">ID Pegawai</string>
    <string name="tv_alamat">Alamat</string>
    <string name="tv_nohp">No HP</string>
    <string name="tv_terdaftar">Terdaftar</string>
    <string name="tv_id_pelanggan">ID Pelanggan</string>
    <string name="tv_namapelanggan">Nama Pelanggan</string>
    <string name="nohp_login">No HP</string>
    <string name="password_login">Password</string>
    <string name="button_login">Login</string>
    <string name="laporannama">Nama Pelanggan</string>
    <string name="laporantanggal">Tanggal</string>
    <string name="laporanstatuspembayaran">Status Pembayaran</string>
    <string name="laporannamalayanan">Nama Layanan</string>
    <string name="laporanlayanantambahan">Layanan Tambahan</string>
    <string name="laporantotal">Rp</string>
    <string name="laporanbuttonstatuspembayaran">Status Pembayaran</string>
    <string name="btntransaksi_pilihpelanggan">Pilih Pelanggan</string>
    <string name="btntransaksi_pilihlayanan">Pilih Layanan</string>
    <string name="btntransaksi_tambahan">Tambahan</string>
    <string name="btntransaksi_proses">Proses</string>
    <string name="transaksi_namapelanggan">Nama Pelanggan</string>
    <string name="transaksi_nohp">No HP</string>
    <string name="transaksi_namalayanan">Nama Layanan</string>
    <string name="transaksi_harga">Harga</string>
    <string name="tv_kosong">Data Tidak Ditemukan</string>
    <string name="tv_id_tambahan">ID Tambahan</string>
    <string name="card_tambahan_id">ID Tambahan</string>
    <string name="tv_tambahan">Tambahan</string>
    <string name="card_tambahan">tambahan</string>
    <string name="card_harga_tambahan">harga</string>
    <string name="judul_tambahan">TAMBAHAN</string>
    <string name="et_tambah_tambahan">Tambahan</string>
    <string name="et_tambahan_harga">Harga</string>
    <string name="tambah_tambahan_simpan">Simpan</string>
    <string name="tv_namatambahan">nama tambahan</string>
    <string name="card_tambahan_harga">harga</string>
    <string name="harga_item_tambahan">Rp</string>
    <string name="nama_item_tambahan">Nama Tambahan</string>
    <string name="tambah_cabang">TAMBAH CABANG</string>
    <string name="tambah_cabang_namacabang">Nama Cabang</string>
    <string name="tambah_cabang_alamat">Alamat Cabang</string>
    <string name="tambah_cabang_layanan">Layanan</string>
    <string name="greetinglogin">Selamat Datang</string>
    <string name="subgreetinglogin">Silahkan login untuk melanjutkan</string>
    <string name="tvregister">Belum punya akun? Daftar</string>
    <string name="btedit">SUNTING</string>
    <string name="daftar">Daftar</string>
    <string name="tvestimasi">Estimasi Hari ini</string>
    <string name="transaksi">Transaksi</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="laporan">Laporan</string>
    <string name="greetingdashboard">Siap melayani pelanggan dengan setulus hati</string>
    <string name="subgreetingdashboard">Jangan Kecewakan Pelanggan</string>
    <string name="akun">Akun</string>
    <string name="layanan">Layanan</string>
    <string name="tambahan">Tambahan</string>
    <string name="pegawai">Pegawai</string>
    <string name="batal">Batal</string>
    <string name="metodepembayaran">Pilih Metode Pembayaran</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="konfirmasidata">Konfirmasi Data</string>
    <string name="layanantambahan">Layanan Tambahan</string>
    <string name="totalbayar">Total Bayar</string>
    <string name="idtransaksi">ID Transaksi</string>
    <string name="tanggal">Tanggal</string>
    <string name="pesanan">Pesanan</string>
    <string name="rinciantambahan">Rincian Tambahan</string>
    <string name="subtotaltambahan">Subtotal Tambahan</string>
    <string name="kirimwa">Kirim WhatsApp</string>
    <string name="cetak">Cetak</string>
    <string name="datapelanggan">Data Pelanggan</string>
    <string name="layananutama">Layanan utama</string>
    <string name="idcabang">ID Cabang</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="detailpegawai">Detail Pegawai</string>
    <string name="detailpelanggan">Detail Pelanggan</string>
    <string name="editpengguna">Edit Pelanggan</string>
    <string name="perbarui">Perbarui</string>
    <string name="validasipelanggansukses">Pelanggan Berhasil Disimpan</string>
    <string name="validasipegawaisukses">Pegawai Berhasil Disimpan</string>
    <string name="validasicabangsukses">Cabang Berhasil Disimpan</string>
    <string name="validasilayanansukses">Layanan Berhasil Disimpan</string>
    <string name="validasitambahansukses">Tambahan Berhasil Disimpan</string>
    <string name="databerhasildiperbarui">Data Berhasil Diperbarui</string>
    <string name="isidulu">Isi Semua Field</string>
    <string name="bayarnanti">Bayar Nanti</string>
    <string name="belumbayar">Belum Dibayar</string>
    <string name="sudahdibayar">Sudah Dibayar</string>
    <string name="selesai">Selesai</string>
    <string name="berhasildiperbarui">Berhasil Diperbarui</string>
    <string name="registerberhasil">Berhasil Daftar</string>
    <string name="transaksiberhasildisimpan">Transaksi Berhasil Disimpan</string>
    <string name="berhasillogin">Login Berhasil</string>
    <string name="validasiproses">Lengkasi data pelanggan dan layanan terlebih dahulu</string>
    <string name="pelanggandipilih">Pelanggan Dipilih : %1$s</string>
    <string name="validasitambahan">Tambahan tidak boleh kosong</string>
    <string name="tunai">Tunai</string>
    <string name="pagi">Selamat Pagi,</string>
    <string name="siang">Selamat Siang,</string>
    <string name="sore">Selamat Sore,</string>
    <string name="malam">Selamat Malam,</string>
    <string name="berhasillogout">Berhasil Logout</string>
    <string name="layanandipilih">Layanan Dipilih: %1$s</string>
    <string name="tambahandipilih">Tambahan Dipilih: %1$s</string>
    <string name="berhasildihapus">Data Berhasil DiHapus</string>
    <string name="ambilsekarang">Ambil Sekaran</string>
    <string name="diambilpada">Diambil Pada %s</string>
    <string name="bayarsekarang">Bayar Sekarang</string>
    <string name="edit_pegawai">Edit Pegawai</string>
    <string name="pembayaranberhasil">Pembayaran Berhasil</string>

</resources>