<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_card_pegawai"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    app:cardCornerRadius="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:backgroundTint="@color/black"
        android:elevation="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/id_pegawai_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/white"
            android:text="@string/tv_id_pegawai"
            android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_titik_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:padding="3dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/id_pegawai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="1dp"
                android:textColor="@color/white"
                android:text="@string/card_pegawai_id"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_nama_pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_nama"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:padding="5dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">
    <TextView
            android:id="@+id/tv_alamat_pegawai_judul"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_alamat"
            android:padding="3dp"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/tv_titik_alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:padding="3dp"
            android:textStyle="bold"
            android:textSize="22sp"
            />

        <TextView
            android:id="@+id/tv_alamat_pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_alamat"
            android:padding="3dp"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">
    <TextView
            android:id="@+id/tv_nohp_pegawai_judul"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_nohp"
            android:padding="3dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/tv_titik_nohp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:padding="3dp"
            android:textStyle="bold"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/tv_nohp_pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_nohp"
            android:padding="3dp"
            android:textSize="18sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">
    <TextView
            android:id="@+id/tv_terdaftar_pegawai_judul"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_terdaftar"
            android:padding="3dp"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/tv_titik_terdaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:padding="3dp"
            android:textStyle="bold"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/tv_terdaftar_pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_terdaftar"
            android:padding="3dp"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">
    <TextView
            android:id="@+id/tv_cabang_pegawai_judul"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_cabang"
            android:padding="3dp"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:id="@+id/tv_titik_cabang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:padding="3dp"
            android:textStyle="bold"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/tv_cabang_pegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_cabang"
            android:padding="3dp"
            android:textSize="18sp"
            />
    </LinearLayout>


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            >

            <Button
                android:id="@+id/bt_hubungi_pegawai"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/card_pegawai_hubungi"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/amber"
                />
            <Button
                android:id="@+id/bt_lihat_pegawai"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/card_pegawai_lihat"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                />

        </GridLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>