<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:padding="10dp"
    app:cardCornerRadius="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:backgroundTint="@color/yellow"
        android:elevation="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:text="@string/card_layanan_id"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_layanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_layanan_nama"
            android:paddingStart="15dp"
            android:layout_marginTop="35dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:paddingTop="5dp"

            />


        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_layanan_harga"
            android:paddingStart="15dp"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/tv_cabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_pelanggan_cabang"
            android:paddingStart="15dp"
            android:textSize="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"

            />


    </LinearLayout>

</androidx.cardview.widget.CardView>