<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_tambah_tambahan">

    <TextView
        android:id="@+id/tv_tambahan_judul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text= "@string/judul_tambahan"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />
    <TextView
        android:id="@+id/tv_tambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tambahan"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tambahan_judul"
        />
    <EditText
        android:id="@+id/et_tambahan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_tambah_tambahan"
        android:background="@drawable/edittext_border"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tambahan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />


    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan_harga"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_tambahan"
        />
    <EditText
        android:id="@+id/et_harga"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_tambahan_harga"
        android:background="@drawable/edittext_border"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_harga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />
    <Button
        android:id="@+id/bt_simpan_tambahan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_tambahan_simpan"
        android:textColor="@color/white"
        android:backgroundTint="@color/amber"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/et_harga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>