<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_tambah_cabang">
    <TextView
        android:id="@+id/tv_tambah_cabang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text= "@string/tambah_cabang"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />
    <TextView
        android:id="@+id/tv_namacabang_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_cabang_namacabang"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tambah_cabang"
        />
    <EditText
        android:id="@+id/et_namacabang"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/tambah_layanan_cabang"
        android:background="@drawable/edittext_border"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_namacabang_judul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />


    <TextView
        android:id="@+id/tv_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_cabang_alamat"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_namacabang"
        />
    <EditText
        android:id="@+id/et_alamat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/tambah_cabang_alamat"
        android:background="@drawable/edittext_border"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_alamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/tv_layanan_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_cabang_layanan"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_alamat"
        />
    <EditText
        android:id="@+id/et_layanan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/tambah_cabang_layanan"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_border"
        app:layout_constraintTop_toBottomOf="@id/tv_layanan_judul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/bt_simpan_cabang"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan_simpan"
        android:textColor="@color/white"
        android:backgroundTint="@color/amber"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@id/et_layanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>